Footer fix
The footer was covering the cta at the bottom of the screen on mobile devices. Rather than fix the problem, it has been changed to stat at the bottom as this increase the useable amount of screen.

--- a/css/base.css
+++ b/css/base.css
@@ -5,24 +5,40 @@ h4,
 h5,
 h6,
 p {
-	margin: 0;
+    margin: 0;
 }
 
 p {
-	margin: 15px 0px;
+    margin: 15px 0px;
 }
 
 html {
+    /* Allows content to fill the viewport and go beyond the bottom */
     height: 100%;
+
+    /* Allows you to scroll below the viewport; default value is visible */
+    overflow-y: scroll;
+
+    /* To smooth any scrolling behavior */
+    -webkit-overflow-scrolling: touch;
 }
 
 body {
-	position: relative;
-	margin: 0;
+
+    /* Allows content to fill the viewport and go beyond the bottom */
     height: 100%;
-	background-color: rgb(240, 240, 240);
-	font-family: Ubuntu, sans-serif;
-	box-sizing: border-box;
+
+    /* Allows you to scroll below the viewport; default value is visible */
+    overflow-y: scroll;
+
+    /* To smooth any scrolling behavior */
+    -webkit-overflow-scrolling: touch;
+
+    position: relative;
+    margin: 0; //height: 100%;
+    background-color: rgb(240, 240, 240);
+    font-family: Ubuntu, sans-serif;
+    box-sizing: border-box;
 }
 
 .desktop-only {
@@ -42,19 +58,21 @@ header h1 {
 }
 
 main {
-    margin-bottom: 60px;
+    //margin-bottom: 60px;
 }
 
 footer {
+/*
     position: fixed;
     bottom: 0px;
     left: 0px;
+*/
     display: flex;
     justify-content: space-between;
     width: 100%;
     height: 50px;
     padding: 0 10px;
-	background-color: rgb(240, 240, 240);
+    background-color: rgb(240, 240, 240);
     box-sizing: border-box;
     border-top: 1px solid;
 }
@@ -62,7 +80,7 @@ footer {
 .cta {
     display: flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;
     margin: 10px;
     padding: 10px;
     font-size: 1.25em;
@@ -92,7 +110,7 @@ footer {
     .desktop-only {
         display: block;
     }
-    
+
     header {
         justify-content: space-between;
         height: auto;
